Minor update repository

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ img {
 <p>Author: Joerg Landskron<br />
 Date: 26th February 2016</p>
 <p>Word-count: 1428</p>
+<p>Link to this document on GiHub gh-pages: <a href="https://joerglandskron.github.io/predmachlearn/" class="uri">https://joerglandskron.github.io/predmachlearn/</a><br />
+Link to the GitHub-Repository for the Prediction Writeup Assignment: <a href="https://github.com/joerglandskron/predmachlearn" class="uri">https://github.com/joerglandskron/predmachlearn</a></p>
 <div id="overview" class="section level2">
 <h2>Overview</h2>
 <p>More and more enthusiasts take measurements about themselves regularly to improve their health using devices as Jawbone Up, Nike FuelBand and Fitbit. With these devices it is now possible to collect a large amount of data about personal activity relatively inexpensively. But people mostly only quantify how often and how long they perform activities and do not quantify how well they do them.</p>
